Support signed j2k images via libopenjpeg.

Fixes ticket #3283.

Reviewed-by: Michael Bradshaw